deployment.yaml
# This file configures the hello-world app which serves public web traffic.
apiVersion: extensions/v1beta1
kind: Deployment
# nom du deployment
metadata:
  name: poc-gke-johann
spec:
  replicas: 1
  # label selectionne par le service pour son deploiement
  selector:
    matchLabels:
      app: poc-gke-johann
  # template utilisé pour les pods
  template:
    metadata:
      labels:
        app: poc-gke-johann
    spec:
      containers:
        - name: poc-gke-johann
          # Replace $GCLOUD_PROJECT with your project ID
          image: gcr.io/poc-demo-johann-asia-south1/springboot-poc-gke-docker-image:latest
          # This app listens on port 8080 for web traffic by default.
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /logs
              name: volume-logs
          #imagePullPolicy is omitted and either the image tag is :latest or it is omitted: Always is applied.
          #cette propriete est important pour mettre à jour l image des containers
      volumes:
        - name: volume-logs
          emptyDir: {}
