gitlab-service.yaml
# The hello service provides a load-balancing proxy over the hello-app
# pods. By specifying the type as a 'LoadBalancer', Kubernetes Engine will
# create an external HTTP load balancer.
apiVersion: v1
kind: Service
metadata:
  name: _APP_NAME_-_CI_ENVIRONMENT_SLUG_-svc
spec:
  type: LoadBalancer
  selector:
    app:  _APP_NAME_-_CI_ENVIRONMENT_SLUG_
  ports:
    - port: 80
      targetPort: 8080
