service2.yaml
# The hello service provides a load-balancing proxy over the hello-app
# pods. By specifying the type as a 'LoadBalancer', Kubernetes Engine will
# create an external HTTP load balancer.
apiVersion: v1
kind: Service
metadata:
  name: poc-gke-johann-service-2
spec:
  type: LoadBalancer
  selector:
    app: poc-gke-johann-2
  ports:
    - port: 80
      targetPort: 8080
