gitlab-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: _APP_NAME_-_CI_ENVIRONMENT_SLUG_-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: _CI_ENVIRONMENT_SLUG_
spec:
  rules:
    - host: _CI_ENVIRONMENT_SLUG_._APP_NAME_._MY_DOMAIN_
      http:
        paths:
          - path: /
            backend:
              serviceName: _APP_NAME_-_CI_ENVIRONMENT_SLUG_-service
              servicePort: 80
