my-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fanout-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: poc-gke-johann-service
              servicePort: 80
            path: /*
          - backend:
              serviceName: poc-gke-johann-4-service
              servicePort: 80
            path: /v2/*
